# 2026-04-28-lettersign

./: .gitignore  AGENTS.md  LICENSE  README.md  Y.ai  main.py  pyproject.toml  svg_centerline.py
.github/workflows/: ci.yml
docs/roadmaps/2026-04-28-lettersign-pipeline/: decisions.md  m1-project-config-cli-foundation.md  m2-pipeline-domain-normalized-svg.md  m3-scad-generation-foundation.md  m4-watch-file-safety.md  m5-agents-docs-style.md  m6-integration-validation-cleanup.md  notes.md  overview.md
docs/roadmaps/2026-04-28-lettersign-pipeline/m1-project-config-cli-foundation/: plan.md
docs/roadmaps/2026-04-28-lettersign-pipeline/m2-pipeline-domain-normalized-svg/: 00-design.md  00-notes.md  01-domain-svg-input.md  02-centerline-bridge.md  03-marker-detection.md  04-normalized-svg-renderer.md  05-pipeline-cli-integration.md  06-readme-docs.md  07-cleanup-validation.md  summary.md
docs/roadmaps/2026-04-28-lettersign-pipeline/m3-scad-generation-foundation/: 00-design.md  00-notes.md  02-scad-geometry-model.md  (+7 more)
projects/foxwood/: foxwood sign.ai
src/lettersign/: __init__.py  centerline.py  cli.py  config.py  errors.py  geometry.py  markers.py  pipeline.py  project.py  render_scad.py  render_svg.py  scad_assets.py  scad_geometry.py  svg_input.py  watcher.py
src/lettersign/scad/: __init__.py  lettersign_common.scad
tests/: test_centerline.py  test_cli.py  test_config.py  test_lettersign.py  test_markers.py  test_pipeline.py  test_project.py  test_render_scad.py  test_render_svg.py  test_scad_assets.py  test_scad_geometry.py  test_svg_input.py  test_watch.py
(+1 files in other folders)
