[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lettersign"
version = "0.1.0"
description = "SVG letter sign tooling (centerlines for LED layouts)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.14"
dependencies = [
    "pygeoops>=0.6.0",
    "shapely>=2.1.2",
    "svgpathtools>=1.7.2",
]

[project.scripts]
lettersign = "lettersign.centerline:main"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.9"]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

